<resources>
    <string name="app_name">My E-Card</string>
    <!-- Strings related to login -->
    <string name="prompt_ecard">E-Card</string>
    <string name="prompt_logo">logo couleurwest it</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_lastname">Nom de famille</string>
    <string name="prompt_phone">Numéro de téléphone</string>
    <string name="prompt_firstname">Prénom</string>
    <string name="prompt_fiche_info">Vos infos</string>
    <string name="prompt_qrcode_vcard">QRCode MeCard</string>
    <string name="prompt_ending">TERMINER</string>
    <string name="prompt_qrcode_uri">QRCode URL</string>
    <string name="action_save">Enregistrer</string>
    <string name="prompt_website">Site web</string>
    <string name="prompt_corp">Entreprise</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_phone">téléphone non valide</string>
    <string name="invalid_url">URL non valide</string>
    <string name="invalid_email">E-Mail non valide</string>
    <string name="invalid_dn">Indiquer à minima e nom </string>
    <string name="no_card">Pas de carte enregistré</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_website">WebsiteActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>